--- a/ChatBot/SleePT.html
+++ b/ChatBot/SleePT.html
@@ -93,10 +93,14 @@
      font-style: italic;
      color: #888;
    }
+
+   .chat {
+    gap: 30px;
+   }
  </style>
 </head>
 <body>
-<div style="display: flex; align-items: flex-start; gap: 20px;">
+<div style="display: flex; align-items: flex-start; gap: 60px;">
 
 
    <!-- LEFT SIDE (Avatar & Exit button) -->
@@ -104,7 +108,7 @@
 
 
      <!-- Exit Button -->
-     <div style="align-self: flex-start; margin-bottom: 10px;">
+     <div style="align-self: flex-start; margin-bottom: 10px; padding:50px 60px;">
        <img src="exit.png" alt="Exit" style="width: 50px; cursor: pointer;" onclick="exitChat()">
      </div>
 
